--- a/draw.html
+++ b/draw.html
@@ -107,6 +107,7 @@
             border-radius: 5px;
             overflow-y: auto;
             width: 300px;
+            max-height: 200px;
         }
 
         #copyBtn {
